Construction of the product page.

--- a/themes/foundation/store/templates/product/show.twig
+++ b/themes/foundation/store/templates/product/show.twig
@@ -142,7 +142,8 @@
             </div>
         </div>
 
-        {% include '@store/product/parts/tabset.twig' with { 'relatedProducts': relatedProducts, 'product': product } %}
+        {% include '@store/product/parts/tags.twig' with { 'tags': product.tags } %}
+        {% include '@store/product/parts/related-products.twig' with { 'relatedProducts': relatedProducts, 'product': product } %}
 
     </section>
 
