--- a/themes/foundation/store/scss/main.scss
+++ b/themes/foundation/store/scss/main.scss
@@ -2,6 +2,7 @@
 @import "vendor/foundation-sites";
 
 @import "mixins/flex";
+@import "mixins/page-sections";
 
 @import "layout/base";
 @import "layout/topbar";
@@ -9,7 +10,7 @@
 @import "component/forms";
 
 @import "product/layout";
-@import "product/tabs";
+@import "product/tags";
 @import "product/show";
 
 @import "cart/show";
