Related product styles.

--- a/themes/foundation/store/scss/main.scss
+++ b/themes/foundation/store/scss/main.scss
@@ -10,6 +10,7 @@
 @import "component/forms";
 
 @import "product/layout";
+@import "product/related-product";
 @import "product/tags";
 @import "product/show";
 
