--- a/themes/foundation/store/scss/layout/_base.scss
+++ b/themes/foundation/store/scss/layout/_base.scss
@@ -27,6 +27,7 @@ html {
 .zk-footer {
     min-height: 50px;
     justify-content: center;
+    border-top: 1px solid $light-gray;
 
     @include breakpoint(small only) {
         display: none;
