--- a/themes/foundation/store/scss/mixins/_page-sections.scss
+++ b/themes/foundation/store/scss/mixins/_page-sections.scss
@@ -1,9 +1,9 @@
 @mixin title-section {
   border-top: 1px solid $light-gray;
+  padding: 1rem 0;
 
   h1,h2,h3,h4,h5,h6 {
     font-size: 1.2rem;
-    margin: 0;
 
     @include breakpoint(medium) {
       text-align: center;
