Adding related product cards.

--- a/themes/foundation/store/scss/mixins/_page-sections.scss
+++ b/themes/foundation/store/scss/mixins/_page-sections.scss
@@ -2,7 +2,7 @@
   border-top: 1px solid $light-gray;
   padding: 1rem 0;
 
-  h1,h2,h3,h4,h5,h6 {
+  > h4 {
     font-size: 1.2rem;
 
     @include breakpoint(medium) {
