--- a/themes/foundation/store/scss/product/_related-product.scss
+++ b/themes/foundation/store/scss/product/_related-product.scss
@@ -4,3 +4,18 @@
     margin-bottom: 2rem;
   }
 }
+
+.zk-related-product-card {
+  @include card-container;
+}
+
+.zk-card-section {
+  @include card-section;
+  > h4 {
+    font-size: 1.3rem;
+    margin-bottom: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
