--- a/themes/foundation/store/scss/mixins/_page-sections.scss
+++ b/themes/foundation/store/scss/mixins/_page-sections.scss
@@ -10,3 +10,12 @@
     }
   }
 }
+
+@mixin flex-column($size: 12, $gutter: false) {
+  flex: flex-grid-column($size);
+  max-width: grid-column($size);
+
+  @if $gutter {
+    @include grid-column-gutter;
+  }
+}
