--- a/themes/bootstrap/admin/templates/option/edit.twig
+++ b/themes/bootstrap/admin/templates/option/edit.twig
@@ -1,4 +1,5 @@
 {# @var option \inklabs\kommerce\EntityDTO\OptionDTO #}
+{# @var optionTypes array #}
 {% extends '@admin/layout/base.twig' %}
 
 {% block pageTitle %}Option - {{ option.name }}{% endblock %}
@@ -18,7 +19,7 @@
                         {{ form.csrf() }}
                         {{ form.hidden('optionId', option.id.hex ) }}
                         <div class="well">
-                            {% include '@admin/option/parts/option-intput-fields.twig' %}
+                            {% include '@admin/option/parts/option-input-fields.twig' %}
                         </div>
 
                         <div class="well">
