--- a/themes/foundation/admin/templates/option/parts/option-input-fields.twig
+++ b/themes/foundation/admin/templates/option/parts/option-input-fields.twig
@@ -13,7 +13,21 @@
                required=""/>
     </div>
 </div>
-
+<div class="row form-group">
+    <label for="option-type" class="control-label col-sm-3">Option Type</label>
+    <div class="col-sm-3">
+        {{ form.select(
+            'option[type]',
+            option.type.slug,
+            optionTypes,
+            'option-type',
+            'form-control input-sm',
+            {
+                'required': 'true'
+            }
+        ) }}
+    </div>
+</div>
 <h2>Optional:</h2>
 
 <div class="row form-group">
