Cart show moving styles out of html into css.

--- a/themes/foundation/store/templates/cart/show.twig
+++ b/themes/foundation/store/templates/cart/show.twig
@@ -6,123 +6,49 @@
 
 {% block content %}
 
-    <div id="zk-shopping-cart">
+    <div class="zk-shopping-cart">
         {% if cart.cartItems is empty %}
-            <div class="row">
-                <div class="columns">
-                    {% include '@store/cart/parts/empty-cart.twig' %}
-                </div>
+            <div class="zk-empty-cart">
+                {% include '@store/cart/parts/empty-cart.twig' %}
             </div>
         {% else %}
-
-            <div class="row">
-                <div class="small-12 medium-9 columns">
-                    <div class="row hide-for-small-only" style="padding-bottom: 15px;">
-                        <div class="medium-6 column">Item</div>
-                        <div class="medium-3 column">Quantity</div>
-                        <div class="medium-3 column">Unit Price</div>
-                    </div>
-                    {% for cartItem in cart.cartItems %}
-                        <div class="row">
-                            <div class="small-12 medium-6 columns" class="cart-product-image">
-                                <h5 class="hide-for-medium">
-                                    <strong>Item</strong>
-                                </h5>
-
-                                <div class="media-object stack-for-small">
-                                    <div class="media-object-section">
-                                        <div class="thumbnail">
-                                            <a href="{{ productUrl(cartItem.product) }}">
-                                                <img src="{{ productImageUrl(cartItem.product) }}" width="110" height="110" />
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="media-object-section">
-                                        <h4>
-                                            <a href="{{ productUrl(cartItem.product) }}">
-                                                <span class="cart-product-title">{{ cartItem.product.name }}</span>
-                                            </a>
-                                        </h4>
-                                        {% include '@store/cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}
-
-                                        <div class="hidden-sm text-muted">
-                                            <small>{{ cartItem.fullSku }}</small>
-                                        </div>
-
-                                        <form action={{ routeUrl('cart.delete-item') }} method="post" role="form">
-                                            {{ form.csrf() }}
-                                            {{ form.hidden('id', cartItem.id.hex) }}
-                                            <input class="zk-submit-anchor" type="submit" value="Remove Item"/>
-                                        </form>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="small-12 medium-3 columns">
-                                <h5 class="hide-for-medium">
-                                    <strong>Quantity</strong>
-                                </h5>
-
-                                <form action="{{ routeUrl('cart.update-quantity') }}" method="post" role="form">
-                                    {{ form.csrf() }}
-                                    {{ form.hidden('id', cartItem.id.hex) }}
-                                    <div style="width: 120px">
-
-                                        <div class="input-group">
-                                            <input class="zk-update-qty input-group-field" type="text" name="quantity" value="{{ cartItem.quantity }}" size="3" maxlength="3">
-                                            <div class="input-group-button">
-                                                <input type="submit" class="button" value="Update">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-
-                            <div class="small-12 medium-3 columns">
-                                <h5 class="hide-for-medium">
-                                    <strong>Unit Price</strong>
-                                </h5>
-                                <p>{{ cartItem.price.quantityPrice | displayPrice }}</p>
-                                <p>{% include '@admin/helper/unit-price.twig' with {'price': cartItem.price } only %}</p>
-                            </div>
-                        </div>
-                        <hr>
-                    {% endfor %}
-                    <div class="column">
-                        {% include '@store/cart/parts/totals.twig' %}
-                    </div>
+            <div class="zk-shopping-cart-listing">
+                {% include '@store/cart/parts/product-list.twig' with { 'cartItems': cart.cartItems } %}
+                <div class="column">
+                    {% include '@store/cart/parts/totals.twig' %}
                 </div>
-
-                <div class="small-12 medium-3 columns">
-                    <div class="callout">
-                        <div id="cart-cta-box">
-                            <strong>
-                                Total ({{ cart.totalQuantity }} items):
-                                <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
-                            </strong>
-                            {% include '@store/helper/checkout-button.twig' only %}
-                        </div>
-
-                        {% if cart.shipmentRate.rate is not null %}
-                            {% include '@store/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}
-                        {% endif %}
-
-                        <form action="{{ routeUrl('cart.apply-coupon') }}" method="post">
-                            {{ form.csrf() }}
-
-                            <div class="input-group">
-                                <input type="text" class="input-group-field" name="coupon_code" value="" placeholder="coupon code" />
-                                <span class="input-group-button">
-                                    <button type="submit" class="button secondary" id="apply-coupon">Apply</button>
-                                </span>
-                            </div>
-                        </form>
+            </div>
+            <div class="zk-shopping-cart-totals-block">
+                <div class="callout">
+                    <div id="cart-cta-box">
+                        <strong>
+                            Total ({{ cart.totalQuantity }} items):
+                            <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
+                        </strong>
+                        {% include '@store/helper/checkout-button.twig' only %}
                     </div>
+
+                    {% if cart.shipmentRate.rate is not null %}
+                        {% include '@store/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}
+                    {% endif %}
+
+                    <form action="{{ routeUrl('cart.apply-coupon') }}" method="post">
+                        {{ form.csrf() }}
+
+                        <div class="input-group">
+                            <input type="text" class="input-group-field" name="coupon_code" value="" placeholder="coupon code" />
+                            <span class="input-group-button">
+                                <button type="submit" class="button secondary" id="apply-coupon">Apply</button>
+                            </span>
+                        </div>
+                    </form>
                 </div>
             </div>
         {% endif %}
 
-        {% include '@store/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
+        <div class="zk-shopping-cart-recommended-products">
+            {% include '@store/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
+        </div>
     </div>
 
 {% endblock %}
