--- a/themes/foundation/store/templates/checkout/pay.twig
+++ b/themes/foundation/store/templates/checkout/pay.twig
@@ -346,7 +346,7 @@
                             </div>
                         {% endif %}
 
-                        <button class="button btn-lg float-left" type="submit" data-loading-text="Loading...">
+                        <button class="button" type="submit" data-loading-text="Loading...">
                             <i class="fa fa-lock"></i> Place your order
                         </button>
                         <div>
