--- a/themes/foundation/store/templates/layout/parts/header.twig
+++ b/themes/foundation/store/templates/layout/parts/header.twig
@@ -48,7 +48,7 @@
 			<form action="{{ routeUrl('user.logout') }}"
                               method="post">
                             {{ form.csrf() }}
-                            <button type="submit" class="btn btn-link">Sign Out</button>
+                            <button type="submit" class="button hollow">Sign Out</button>
                         </form>
                         </li>
                         <li class="divider-vertical hidden-xs"></li>
