--- a/themes/foundation/store/templates/helper/site-search.twig
+++ b/themes/foundation/store/templates/helper/site-search.twig
@@ -4,7 +4,7 @@
        role="search">
     <div class="input-group">
         <input type="text" name="q" class="form-control" placeholder="Search" value="{{ searchQuery }}">
-        <div class="input-group-btn">
+        <div class="input-group-button">
             <button type="submit" class="button secondary search-button">
                 <i class="fa fa-search"></i>
             </button>
