--- a/themes/foundation/store/scss/pages/cart/_show.scss
+++ b/themes/foundation/store/scss/pages/cart/_show.scss
@@ -3,7 +3,8 @@
 }
 
 .zk-shopping-cart {
-  @include flex-grid-row;
+  @include flex-grid-row();
+  width: 100%;
   margin: {
     top: 15px;
     bottom: 25px;
